# minicoap

./: .gitignore  CMakeLists.txt  LICENSE  README.md  coapresource.cpp  coapresource.h  configresource.cpp  configresource.h  minicoap.cpp  minicoap.h  minicoapdefinitions.h  minicoapdefinitions.h.autosave  wellknowncoreresource.cpp  wellknowncoreresource.h
configresource/: configresource.cpp  configresource.h
examples/minicoap-light/: Makefile  definitions.h  labelresource.cpp  labelresource.h  lightresource.cpp  lightresource.h  minicoap-light.ino  wifiresources.cpp  wifiresources.h
humidityresource/: humidityresource.cpp  humidityresource.h
otaresource/: otaresource.cpp  otaresource.h
relayresource/: relayresource.cpp  relayresource.h
semiotresource/: semiotresource.cpp  semiotresource.h
systemresource/: systemresource.cpp  systemresource.h
temperatureresource/: temperatureresource.cpp  temperatureresource.h
